<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/violetbackground">
            <ImageView
                android:id="@+id/img_zodiac"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:scaleType="fitXY"
                android:src="@drawable/virgo"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_zodiac_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/zodiac_name" />

                <TextView
                    android:id="@+id/tv_zodiac_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/zodiac_date" />

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_zodiac_detail"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="10dp"
            android:textSize="22sp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical|end"
            android:shadowColor="@color/black"
            android:shadowDx="@integer/material_motion_duration_long_1"
            android:text="@string/zodiac_detail" />

        <Button
            android:id="@+id/btn_open_site"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/view_more"/>

    </LinearLayout>

</LinearLayout>