<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_200"
    android:layout_marginBottom="10dp"
    android:padding="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/img_item_picture"
        android:layout_marginEnd="15dp"
        tools:src="@tools:sample/avatars"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            tools:text="@string/zodiac_name" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/tv_item_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginBottom="3dp"
            android:maxLines="2"
            android:textColor="@color/white"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:maxLines="2"
            tools:text="@string/detail"/>
    </LinearLayout>


    </LinearLayout>
